kubernetes/kafka-ui.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-ui
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
      - name: kafka-ui
        image: provectuslabs/kafka-ui:latest
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: kafka-ui-svc
spec:
  type: ClusterIP 
  ports:
    - port: 8082 # 외부에서 접근할 포트
      targetPort: 8080 # 컨테이너 내부 포트
  selector:
    app: kafka-ui
