kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: all-services-ingress # 이름 변경
spec:
  ingressClassName: "nginx"
  rules:
  - http: # host 주소, 비어있을 경우 모든 호스트에 적용, 추후 도메인 적용
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8080
      - path: /kafka-ui
        pathType: Prefix
        backend:
          service:
            name: kafka-ui-svc
            port:
              number: 8082
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
